--- a/astra-childtheme/style.css
+++ b/astra-childtheme/style.css
@@ -11,3 +11,20 @@
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
  Text Domain:  astrachildtheme
 */
+
+.btn-1 .elementor-button{
+background-color: transparent !important;
+color: #646464 !important;
+border: 2px solid #646464 !important;
+border-radius: 0px !important;
+transition: .3s ease-in-out all !important;  
+}
+
+.btn-1 .elementor-button:hover{
+background-color: #646464 !important;
+color: #f2f2f2 !important;  
+}  
+
+.footerhover .elementor-button:hover{
+  box-shadow: 0 5px 15px rgba(242, 242, 242, .4);
+}
